--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sitemage",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "CMS for programmers",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/lostcodder/sitemage/issues"
   },
-  "homepage": "https://github.com/lostcodder/sitemage#readme"
+  "homepage": "https://github.com/lostcodder/sitemage#readme",
+  "dependencies": {
+    "express": "^4.15.4"
+  }
 }
